<resources>
    <string name="app_name">PruebaAppHuellaDigital</string>
    <string name="Email">Email</string>
    <string name="Password">Contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <string name="btnRegister">Registrarse</string>
    <string name="authenticate">Authenticate</string>
    <string name="GoogleRegister">Registrate con Google</string>
    <string name="UserName">Nombre completo</string>
    <string name="phoneNumberHint">Phone Number</string>
    <string name="phonelenght">Enter a Valid phone number with +(country code)</string>
    <string name="phoneError">A phone number is required</string>
    <string name="codeVerification">Enter a valid Code</string>
    <string name="verificationCodeHint">Verification code</string>
    <string name="verificationDescription">A verification code has been sent to your phone</string>
    <string name="verifyCodeButton">Verify code</string>
    <string name="WelcomeMessage">Welcome to KNXBank</string>
    <string name="knxLogo" translatable="false">Logo</string>
    <string name="UserDNI">DNI</string>
    <string name="UserBirthDate">Fecha de Nacimiento</string>
    <string name="EmailSender">Desea enviar correo electronico de confirmacion?</string>


    <string name="google_status_fmt" />
    <string name="title_activity_index">Index</string>
    <string name="title_activity_register_new_client">RegisterNewClient</string>
    <string name="title_activity_firma_contrato">FirmaContrato</string>
</resources>
